# tempura

./: CHANGELOG.md  Cargo.toml  README.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml
resources/: gitignore  page.html.hbs  sample.md  sample2.md  style.css
src/: cli.rs  directory.rs  generator.rs  handlebars_helpers.rs  lib.rs  loader.rs  main.rs  pipeline.rs  project_config.rs  store.rs  string_matcher.rs  template_engine.rs  transformer.rs  value.rs
src/generator/: echo_generator.rs  handlebars_generator.rs
src/loader/: blob_loader.rs  frontmatter_loader.rs  json_loader.rs  markdown_loader.rs  static_resource_loader.rs  template_loader.rs  text_loader.rs  text_with_frontmatter_loader.rs  yaml_loader.rs
src/pipeline/: entry.rs  job.rs  resource.rs  step.rs
src/transformer/: json_path_query.rs  json_path_query_all.rs  reloader.rs  template_renderer.rs  text_as_template.rs
src/transformer/template_renderer/: handlebars_helpers.rs  template_engine.rs
