[package]
name = "tempura"
version = "0.2.3"
edition = "2021"
authors = ["yuma140902"]
description = "Static site generator (SSG) using handlebars and pulldown-cmark"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yuma140902/tempura"
keywords = ["ssg", "templating", "web", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
handlebars = "4.4.0"
matter = "0.1.0-alpha4"
once_cell = "1.18.0"
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
pulldown-cmark = "0.9.3"
regex = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1.1.0"
serde_yaml = "0.9.25"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
walkdir = "2"
