[package]
name = "tempura"
version = "0.4.3"
edition = "2021"
authors = ["yuma140902"]
description = "Pipeline-based Static site generator"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yuma140902/tempura"
keywords = ["ssg", "templating", "web", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "help"] }
handlebars = "4.5.0"
matter = "0.1.0-alpha4"
once_cell = "1.18.0"
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
pulldown-cmark = "0.9.3"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_json_path = "0.6.4"
serde_regex = "1.1.0"
serde_yaml = "0.9.27"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
walkdir = "2.4.0"
